# wlroots-rs

./: .build.yml  .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  build.rs  makefile
example-config/: Cargo.toml
example-config/src/: lib.rs
examples/: cat.data  minimal.rs  pointer.rs  rotation.rs  simple.rs  tablet.rs  touch.rs  wl_shell_test.rs  xdg_shell_v6_test.rs
how-to-make-a-wayland-compositor/: Cargo.toml  build.rs
how-to-make-a-wayland-compositor/src/: SUMMARY.md  basic_output_cursor.md  breaking_out_of_your_shell.md  credits.md  getting_to_the_point.md  getting_to_the_point_exercises.md  goodbye_world.md  goodbye_world_exercises.md  goodbye_world_shutdown.md  goodbye_world_tty_switching.md  hello_world.md  hello_world_analyze.md  hello_world_exercises.md  hello_world_output.md  spawning_a_client.md  using_output_cursor.md  using_real_cursor.md  wayland_introduction.md  wlr_cursor.md  wlroots_introduction.md
how-to-make-a-wayland-compositor/src/1-hello-world/: main.rs  sample_output.txt  weston_info_output.txt
how-to-make-a-wayland-compositor/src/2-goodbye-world/: main.rs
how-to-make-a-wayland-compositor/src/3-getting-to-the-point/: keyboard.rs  main.rs  output.rs  pointer.rs
how-to-make-a-wayland-compositor/src/4-breaking-out-of-your-shell/: keyboard.rs  main.rs  output.rs  pointer.rs  seat.rs  view.rs  xdg_shell.rs
how-to-make-a-wayland-compositor/src/4-breaking-out-of-your-shell/shell/: mod.rs  shell.rs  xdg.rs
rootston/: Cargo.toml  rootston.ini.example
rootston/src/: config.rs  cursor.rs  input.rs  main.rs  output.rs  seat.rs  server.rs
src/: backend.rs  compositor.rs  cursor.rs  device.rs  errors.rs  key_event.rs  lib.rs  macros.rs  output.rs  pointer.rs  session.rs  utils.rs
src/backend/: backend.rs  drm.rs  headless.rs  libinput.rs  mod.rs  multi.rs  session.rs  wayland.rs  x11.rs
src/events/: key_events.rs  mod.rs  pointer_events.rs  seat_events.rs  switch_events.rs  tablet_pad_events.rs  tablet_tool_events.rs  touch_events.rs  wl_shell_events.rs  xdg_shell_events.rs  xdg_shell_v6_events.rs  xwayland_events.rs
src/extensions/: gamma_control.rs  gtk_primary_selection.rs  idle.rs  idle_inhibit.rs  input_inhibit.rs  mod.rs  screencopy.rs  screenshooter.rs  server_decoration.rs
src/manager/: drag_icon_handler.rs  input_manager.rs  io_manager.rs  keyboard.rs  keyboard_handler.rs  mod.rs  output.rs  output_handler.rs  output_manager.rs  pointer.rs  pointer_handler.rs  switch_handler.rs  tablet_pad_handler.rs  tablet_tool_handler.rs  touch_handler.rs  user_output.rs  wl_shell_handler.rs  wl_shell_manager.rs  xdg_shell_handler.rs  xdg_shell_manager.rs  xdg_shell_v6_handler.rs  xdg_shell_v6_manager.rs
src/output/: mod.rs  output.rs  weak_output.rs
src/render/: gles2.rs  image.rs  matrix.rs  mod.rs  pixman_region.rs  renderer.rs  texture.rs
src/types/: area.rs  cursor.rs  device.rs  dmabuf.rs  input_device.rs  keyboard.rs  mod.rs  output.rs  pointer.rs  server_decoration.rs  surface.rs
src/types/cursor/: cursor.rs  mod.rs  xcursor.rs  xcursor_manager.rs
src/types/data_device/: data_source.rs  manager.rs  mod.rs
src/types/input/: input_device.rs  keyboard.rs  mod.rs  pointer.rs  switch.rs  tablet_pad.rs  tablet_tool.rs  touch.rs
src/types/output/: cursor.rs  damage.rs  layout.rs  mod.rs  mode.rs  output.rs  output_cursor.rs  output_damage.rs  output_layout.rs  output_mode.rs
src/types/seat/: drag_icon.rs  grab.rs  mod.rs  seat.rs  seat_client.rs  touch_point.rs
src/types/shell/: mod.rs  wl_shell.rs  xdg_shell.rs  xdg_shell_v6.rs
src/types/surface/: mod.rs  sub_surface.rs  subsurface.rs  subsurface_manager.rs  surface.rs  surface_state.rs
src/utils/: edges.rs  handle.rs  log.rs  mod.rs  region.rs  string.rs  time.rs
src/xwayland/: hints.rs  manager.rs  mod.rs  server.rs  surface.rs
wlroots-dehandle/: Cargo.toml
wlroots-dehandle/src/: lib.rs
wlroots-sys/: Cargo.toml  build.rs
wlroots-sys/examples/: simple.rs
wlroots-sys/src/: lib.rs  wlroots.h
