[workspace]
members = ["wlroots-sys", "wlroots-dehandle"]

[package]
name = "wlroots"
version = "0.2.2"
authors = ["Timidger <APragmaticPlace@gmail.com>"]
repository = "https://github.com/swaywm/wlroots-rs"
documentation = "https://docs.rs/wlroots"
description = "Wayland compositor framework"
keywords = ["wayland", "compositor", "bindings"]
categories = ["external-ffi-bindings", "gui"]
license = "MIT"
exclude = [".travis.yml"]
autoexamples = true

[dependencies]
wlroots-sys = { path = "wlroots-sys", default-features = false, version = "0.2" }
wlroots-dehandle = { path = "wlroots-dehandle", version = "1.0" }
xkbcommon = "0.3"
bitflags = "1.0"
vsprintf = "1.0.1"

[features]
default = ["libcap", "systemd", "elogind"]
static = ["wlroots-sys/static"]
libcap = ["wlroots-sys/libcap"]
systemd = ["wlroots-sys/systemd"]
elogind = ["wlroots-sys/elogind"]
unstable = ["wlroots-sys/unstable"]

[[example]]
name = "minimal"
required-features = ["unstable"]

[[example]]
name = "pointer"
required-features = ["unstable"]

[[example]]
name = "rotation"
required-features = ["unstable"]

[[example]]
name = "touch"
required-features = ["unstable"]

[[example]]
name = "tablet"
required-features = ["unstable"]

[[example]]
name = "xdg_shell_v6_test"
required-features = ["unstable"]

# This will build the unstable features for documentation on docs.rs
[package.metadata.docs.rs]
features = ["unstable"]