[package]
name = "wlroots-dehandle"
version = "2.0.0"
authors = ["Timidger <APragmaticPlace@gmail.com>"]
description = "Procedural macro to upgrade wlroots handles without callback hell"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["full", "fold"] }
quote = "0.6"
proc-macro2 = "0.4"
