[package]
name = "wlroots-sys"
version = "0.0.0"
authors = ["Timidger <APragmaticPlace@gmail.com>"]
description = "Bindgen generated low-level wlroots wrapper"
keywords = ["wayland", "compositor", "bindings"]
categories = ["external-ffi-bindings"]
license = "MIT"
exclude = ["wlroots/.travis.yml"]

build = "build.rs"

[build-dependencies]
bindgen = "0.30.*"
meson = { version = "1.0", optional = true }
wayland-scanner = "0.12.*"
# For building optional dependencies
pkg-config = "0.3.*"

[dependencies]
libc = "^0.2.*"
wayland-sys = {version = "0.12.*" }
wayland-server = { version = "0.12.*" }

[features]
default = ["static", "libcap", "systemd", "elogind", "unstable-features"]
static = ["meson"]
libcap = []
systemd = []
elogind = []
unstable-features = []
